--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "An accounting API",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon src/app.js"
+    "start": "nodemon src/app.js"
   },
   "author": "Deepak Sharma",
   "license": "ISC",
